# appt-agent

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
appt_agent/: __init__.py  __main__.py  agent.py  builder.py  models.py
appt_agent/calendars/: __init__.py  base.py  google_cal.py  mcp_cal.py  outlook_cal.py
appt_agent/engine/: __init__.py  conversation.py  slot_filler.py
appt_agent/intents/: __init__.py  classifier.py  models.py
appt_agent/llm/: __init__.py  anthropic_llm.py  base.py  bedrock_llm.py  cohere_llm.py  google_llm.py  meta_llm.py  mistral_llm.py  openai_llm.py
appt_agent/server/: __init__.py  app.py  routes.py
appt_agent/storage/: __init__.py  tracker.py
appt_agent/studio/: __init__.py  __main__.py  app.py  config_store.py  routes.py  routes_calendar.py
appt_agent/studio/templates/: base.html  business.html  businesses.html  calendars.html  chat.html  dashboard.html  intents.html  llm.html  logs.html  test_chat.html
appt_agent/webhooks/: __init__.py  dispatcher.py
docs/: calendars.md
tests/: conftest.py  test_builder.py  test_engine.py  test_intents.py  test_server.py  test_token_tracker.py  test_webhooks.py
